<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_task"
            android:title="@string/nav_tasks" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_task"
            android:title="@string/nav_categories" />

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_task"
            android:title="@string/nav_statistics" />

    </group>

    <item android:title="Configuracion">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_task"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>